# ollama-mcp-client-webapp

./: .cursorignore  .gitignore  README.md  development_plan_dual_interface.md  development_plan_ollama_integration.md  pyproject.toml  requirements.txt
config/: servers.json
docs/: AGNO_INTEGRATION.md  API_DOCUMENTATION.md  APP_FLOW.md  ARCHITECTURE.md  BACKEND_GUIDE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEVELOPMENT_SETUP.md  FRONTEND_GUIDE.md  PRD.md
mcp_test_harness/: __init__.py  __main__.py  app.py  config.py  logger.py  mcp_client.py  models.py
ollama_mcp/: __init__.py  agent.py  agno_client.py  agno_integration.py  agno_multimodal.py  app.py  chat_ui.py  client.py  debug.py  debug_module.py  ollama_direct.py  visualizer.py
ollama_mcp/models/: __init__.py  multimodal.py  ollama.py
ollama_mcp/tools/: __init__.py  base.py  registry.py
ollama_mcp/ui/: app.py
ollama_mcp/ui/components/: chat.py  settings.py
tests/: __init__.py  test_agent.py  test_agno_integration.py  test_agno_multimodal.py  test_app.py  test_client.py  test_config.py  test_debug.py  test_debug_module.py  test_mcp_client.py  test_multimodal.py  test_tools.py  test_visualizer.py
tests/fixtures/: generate_test_image.py
