[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama_mcp"
version = "0.1.0"
description = "Ollama MCP Client & Agent Framework"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=1.3.0",
    "loguru>=0.7.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.11.0",
    "nest-asyncio>=1.6.0",
    "packaging>=24.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "agno>=1.2.5",
    "ollama (>=0.4.7,<0.5.0)",
    "gradio (>=5.23.1,<6.0.0)",
    "duckduckgo-search (>=7.5.5,<8.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]

# Gradioを使用したい場合のためのオプショナル依存関係を追加
ui = [
    "gradio>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.poetry.scripts]
app = "ollama_mcp.app:main"
